# sentrifyai-python

./: .replit  README.md  pyproject.toml  replit.nix  setup.py
sentrifyai/: api.py
sentrifyai.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt
