[tool.poetry]
name = "repl-nix-sentrifyai-python-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_sentrifyai_python_1"}]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
